# FavoritesFilms

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
src/adapters/: settings.py
src/adapters/primary/api/: app.py
src/adapters/primary/api/movies/: dependencies.py  routes.py  schemas.py
src/adapters/primary/api/users/: dependencies.py  routes.py  schemas.py  security.py
src/adapters/secondary/db/: mapping.py  session.py  tables.py
src/adapters/secondary/db/migrations/: env.py
src/adapters/secondary/db/migrations/versions/: c3cf2c29c127_init.py
src/adapters/secondary/db/repositories/: __init__.py  base.py  movie.py  user.py
src/adapters/secondary/request/: __init__.py  kinopoisk.py
src/application/: exceptions.py  helpers.py
src/application/movie/: entities.py  interfaces.py  services.py
src/application/user/: entities.py  interfaces.py  services.py
